--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -176,7 +176,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 8/25 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				Review of C++ and Object-Oriented Programming (cont.) [<a href="slides\2110-topic 2-Review of C++ and Objected Oriented Programming.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
