--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,22 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
+				<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">DP-GTR: Differentially Private Prompt Protection via Group Text Rewriting</font>
+						<br>
+						<font color="#000000">M. Li, H. Fan, S. Fu, J. Ding, and Y. Feng</font>
+						<br>
+						<font>Findings of the Conference on Empirical Methods in Natural Language Processing (<b>EMNLP Findings</b>), 2025.</font>
+						<br>
+						<font color="black">paper</font>  &nbsp; <font color="black">code</font>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
 				<td><img src="./publication/ICCV-25-PRVQL.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
