--- a/group.html
+++ b/group.html
@@ -33,9 +33,9 @@
 		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li> <!--(female)--> 
-		
-		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant</li> <!--(female)--> 
-		
+		<li><font style="font-weight:bold; line-height: 120%">Naga Prudhvi Mareedu</font>, MS student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Cuicui Zhang</font>, MS student</li> <!--(female)--> 
+		<li><font style="font-weight:bold; line-height: 120%">Subin Ghimire</font>, Undergraduate student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Michelle Li</font>, K-12 student from TAMS</li> <!-- (female) -->
 		<li><font style="font-weight:bold; line-height: 120%">Jonas Li</font>, K-12 student from TAMS</li>
 		
@@ -58,14 +58,13 @@
 	<font size="4" color="black"><b>Alumni</b></font>
 	<br>
 	<ul style="margin-top:5px;">
-
+		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS, 2024; volunteer research assistant, 2025</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student, 2025</li> <!--(female)--> 
-		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS student, 2025</li>
+		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS, 2025</li>
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student, 2025</li> <!-- entennial High School -->
 		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student, 2024</li> <!-- ebanon Trail High School -->
 		<li><font style="font-weight:bold; line-height: 120%">Syed Abdullah Imam</font>, Undergraduate student, 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Joshua Yao</font>, Undergraduate student, 2024</li> <!--(minority)--> 
-		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS, 2024</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, MS, 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, K-12 student from TAMS, 2024</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Thanh Le</font>, MS, 2023</li>
