--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -140,6 +140,7 @@ div img:hover{
 		
 		<ul>
 			<li>
+				<font size="4"> <b>09/09/2025:</b> Quiz on Wednesday's class (09/10/2025).</font>
 				<font size="4"> <b>08/12/2025:</b> The course website has been launched.</font>
 			</li>
 		</ul>
@@ -216,7 +217,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  9/10 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				Quiz </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
