--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -227,7 +227,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 5</b> <br> 9/15 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				Abstract Data Type, List, Stack, and Queue (cont.) [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -235,7 +235,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  9/17 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				Abstract Data Type, List, Stack, and Queue (cont.) [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
