--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -163,7 +163,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/18 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Introduction and Course Overview [<a href="slides\2110-topic 1-Introduction and Course Overview.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+				<b>Introduction and Course Overview</b> [<a href="slides\2110-topic 1-Introduction and Course Overview.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -171,7 +171,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  8/20 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Review of C++ and Object-Oriented Programming [<a href="slides\2110-topic 2-Review of C++ and Objected Oriented Programming.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
+				<b>Review of C++ and Object-Oriented Programming</b> [<a href="slides\2110-topic 2-Review of C++ and Objected Oriented Programming.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -179,7 +179,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 8/25 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Review of C++ and Object-Oriented Programming (cont.) [<a href="slides\2110-topic 2-Review of C++ and Objected Oriented Programming.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font> </font>
+				<b>Review of C++ and Object-Oriented Programming</b> (cont.) [<a href="slides\2110-topic 2-Review of C++ and Objected Oriented Programming.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -187,7 +187,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  8/27 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-			 Analysis of Algorithm [<a href="slides\2110-topic 3-Algorithm Analysis.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
+			 <b>Analysis of Algorithm</b> [<a href="slides\2110-topic 3-Algorithm Analysis.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -203,7 +203,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  9/3 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Analysis of Algorithm (cont.) [<a href="slides\2110-topic 3-Algorithm Analysis.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
+				<b>Analysis of Algorithm</b> (cont.) [<a href="slides\2110-topic 3-Algorithm Analysis.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -211,7 +211,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 4</b> <br> 9/8 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Abstract Data Type, List, Stack, and Queue [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
+				<b>Abstract Data Type, List, Stack, and Queue</b> [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -227,7 +227,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 5</b> <br> 9/15 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Abstract Data Type, List, Stack, and Queue (cont.) [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
+				<b>Abstract Data Type, List, Stack, and Queue</b> (cont.) [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -235,7 +235,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  9/17 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Abstract Data Type, List, Stack, and Queue (cont.) [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
+				<b>Abstract Data Type, List, Stack, and Queue</b> (cont.) [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
