--- a/group.html
+++ b/group.html
@@ -36,6 +36,7 @@
 		<li><font style="font-weight:bold; line-height: 120%">Naga Prudhvi Mareedu</font>, MS student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Cuicui Zhang</font>, MS student</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Subin Ghimire</font>, Undergraduate student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Dylan Joseph</font>, K-12 student from TAMS</li>
 		<li><font style="font-weight:bold; line-height: 120%">Michelle Li</font>, K-12 student from TAMS</li> <!-- (female) -->
 		<li><font style="font-weight:bold; line-height: 120%">Jonas Li</font>, K-12 student from TAMS</li>
 		
