--- a/publications.html
+++ b/publications.html
@@ -120,7 +120,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">GSOT3D: Towards Generic 3D Single Object Tracking in the Wild</font>
 						<br>
-						<font color="#000000">Y. Jiao, Y. Li, J. Ding, Q. Yang, S. Fu, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<font color="#000000">Y. Jiao*, Y. Li*, J. Ding, Q. Yang, S. Fu, H. Fan&dagger;, and L. Zhang&dagger;</font>
 						<br>
 						<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2025.</font>
 						<br>
@@ -136,7 +136,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">Attention to Trajectory: Trajectory-Aware Open-Vocabulary Tracking</font>
 						<br>
-						<font color="#000000">Y. Li, Y. Jiao, D. Meng, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<font color="#000000">Y. Li*, Y. Jiao*, D. Meng, H. Fan&dagger;, and L. Zhang&dagger;</font>
 						<br>
 						<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2025.</font>
 						<br>
