--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,7 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
-				<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td><img src="./publication/DPGTR.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">DP-GTR: Differentially Private Prompt Protection via Group Text Rewriting</font>
@@ -92,7 +92,7 @@
 						<br>
 						<font>Findings of the Conference on Empirical Methods in Natural Language Processing (<b>EMNLP Findings</b>), 2025.</font>
 						<br>
-						<font color="black">paper</font>  &nbsp; <font color="black">code</font>
+						<a href="https://arxiv.org/abs/2503.04990" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/FatShion-FTD/DP-GTR" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
