--- a/group.html
+++ b/group.html
@@ -64,6 +64,7 @@
 		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS, 2025</li>
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student, 2025</li> <!-- entennial High School -->
 		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student, 2024</li> <!-- ebanon Trail High School -->
+		<li><font style="font-weight:bold; line-height: 120%">Ny Dang</font>, Undergraduate student, 2024</li> <!-- (female) -->
 		<li><font style="font-weight:bold; line-height: 120%">Syed Abdullah Imam</font>, Undergraduate student, 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Joshua Yao</font>, Undergraduate student, 2024</li> <!--(minority)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, MS, 2024</li>
