--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,22 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
+				<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">All You Need is One: Capsule Prompt Tuning with a Single Vector</font>
+						<br>
+						<font color="#000000">Y. Liu, J. Liang, H. Fan, W. Yang, Y. Cui, X. Han, L. Huang, D. Liu, Q. Wang, and C. Han</font>
+						<br>
+						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2025.</font>
+						<br>
+						paper  &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
 				<td><img src="./publication/DPGTR.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
