--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,39 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
-				<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td><img src="./publication/LMEEC.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Robust Ego-Exo Correspondence with Long-Term Memory</font>
+						<br>
+						<font color="#000000">Y. Hu*, B. Fan*, X. Gu, H. Ren, D. Liu, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<br>
+						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2025.</font>
+						<br>
+						paper  &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/loratv2.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">LoRATv2: Enabling Low-Cost Temporal Modeling in One-Stream Trackers</font>
+						<br>
+						<font color="#000000">L. Lin, H. Fan, Z. Zhang, Y. Huang, Y. Wang, Y. Xu, and H. Ling</font>
+						<br>
+						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2025. (<b>Spotlight</b>)</font>
+						<br>
+						paper  &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/CaPT.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">All You Need is One: Capsule Prompt Tuning with a Single Vector</font>
@@ -186,9 +218,9 @@
 						<br>
 						<font color="#000000">S. Dong, Y. Feng, J. Liang, Q. Yang, Y. Lin, and H. Fan</font>
 						<br>
-						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2025.</font>
+						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2025. (<b>Oral</b>)</font>
 						<br>
-						paper &nbsp; code
+						<a href="https://arxiv.org/abs/2405.17660" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/ShaohuaDong2021/LoReTrack" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
@@ -202,9 +234,9 @@
 						<br>
 						<font color="#000000">H. Ren, Z. Luo, H. Fan, X. Yuan, G. Wang, and L. Zhang</font>
 						<br>
-						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2025.</font>
+						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2025. (<b>Oral</b>)</font>
 						<br>
-						paper &nbsp; code
+						paper
 						<br>
 					</p>
 				</td>
