--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -243,7 +243,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 6</b> <br> 9/22 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				<b>Abstract Data Type, List, Stack, and Queue</b> (cont.) [<a href="slides\2110-topic 4-Abstract Data Type, List, Stack, and Queue.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
