--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	
 	
-	<font size="3" color="black"><b>To prospective students:</b></font> I am looking for <i><b>self-motivated</b></i> <b>PhD</b>/<b>master</b>/<b>undergraduate</b>/<b>TAMS</b> students to work on interesting problems in computer and robotic vision. If you are interested, please read <a href="./prospective-students.html" target="_blank"><font color="#2D61FF">HERE</font></a>.
+	<font size="3" color="black"><b>To prospective students:</b></font> I am looking for <i><b>self-motivated</b></i> <b>PhD</b>/<b>master</b>/<b>undergraduate</b>/<b>TAMS</b> students and <b>(remote) research interns</b> to work on interesting problems in computer and robotic vision. If you are interested, please read <a href="./prospective-students.html" target="_blank"><font color="#2D61FF">HERE</font></a>.
 	
 	<!-- <font size="3" color="black"><b>To prospective students:</b></font>: <font size="3"> I am looking for <b><i>self-motivated</i> PhD students</b> to work on interesting problems in computer and robotic vision, with a focus on <i>general video analysis</i>. Solid background in mathematics and programming is required. If you're interested, please send your CV, transcript(s), and test scores to my e-mail (heng.fan@unt.edu). Publication in related fields is a plus.<br>
 
