--- a/publications.html
+++ b/publications.html
@@ -236,7 +236,7 @@
 						<br>
 						<font>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2025. (<b>Oral</b>)</font>
 						<br>
-						paper
+						<a href="https://arxiv.org/abs/2509.07335" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/CyanSea123/G3CN-Gaussian-Topology" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
