--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -259,7 +259,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 9/29 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				<b>Tree</b> (cont.) [<a href="slides\2110-topic 5-Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font> </font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
