--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="black"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2025-10:</font> Recognized as the <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/8" target="_blank"><font><font color="#2D61FF">World's Top 2% Scientists</font></font></a> by Standford University/Elsevier.
 		<li><font style="font-weight:bold; line-height: 120%">2025-09:</font> Three papers (pdf/code, pdf/code, pdf/code) are accepted to <a href="https://neurips.cc/" target="_blank"><font><font color="#2D61FF">NeurIPS 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-08:</font> A paper on privacy-preserving LLM (<a href="https://arxiv.org/abs/2503.04990" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>/<a href="https://github.com/FatShion-FTD/DP-GTR" target="_blank"><font><font color="#2D61FF">code</font></font></a>) is accepted to Findings of <a href="https://2025.emnlp.org/" target="_blank"><font><font color="#2D61FF">EMNLP 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-07:</font> I will be serving as an Area Chair for <a href="https://wacv.thecvf.com/" target="_blank"><font><font color="#2D61FF">WACV 2026</font></font></a>.</li>
