--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -275,7 +275,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 10/6 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				<b>Splay Tree</b> [<a href="slides\2110-topic 6-Splay Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font> </font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
