--- a/publications.html
+++ b/publications.html
@@ -188,7 +188,7 @@
 						<br>
 						<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2025.</font>
 						<br>
-						<a href="https://arxiv.org/abs/2503.08145" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; code
+						<a href="https://arxiv.org/abs/2503.08145" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/Nathan-Li123/TRACT" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
