--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -140,6 +140,9 @@ div img:hover{
 		
 		<ul>
 			<li>
+				<font size="4"> <b>10/06/2025:</b> Preview and quiz on Monday's class (10/13/2025).</font>
+			</li>
+			<li>
 				<font size="4"> <b>09/09/2025:</b> Quiz on Wednesday's class (09/10/2025).</font>
 			</li>
 			<li>
@@ -283,7 +286,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  10/8 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				<b>Priority Queues</b> [<a href="slides\2110-topic 7-Priority Queues.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font> </font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -291,7 +294,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br> 10/13 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				Preview and quiz </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -299,7 +302,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  10/15 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				<fron style="color: red;"><b>Mid-term Exam (time TBD)</b></fron> </font>
+				<fron style="color: red;"><b>Mid-term Exam (1:00 p.m. - 2:20 p.m.)</b></fron> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
