--- a/service.html
+++ b/service.html
@@ -115,7 +115,7 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				IEEE International Conference on Robotics and Automation (<font style="font-weight:bold">ICRA</font>)</font>, <font size="3">2025, 2026</font>
+				IEEE International Conference on Robotics and Automation (<font style="font-weight:bold">ICRA</font>)</font>, <font size="3">2025</font>
 				<br>
 			</p>
 		</li>
