--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -334,7 +334,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  10/29 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				<b>Sorting</b> (cont.) [<a href="slides\2110-topic 9-Sorting.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font> </font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -342,7 +342,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 12</b> <br> 11/3 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				<b>Sorting</b> (cont.) [<a href="slides\2110-topic 9-Sorting.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font> </font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
