--- a/teaching/25F-2110/project.htm
+++ b/teaching/25F-2110/project.htm
@@ -69,11 +69,8 @@ div img:hover{
 	
 	<p style="text-align:justify">
 
-	<font size="4"> In this project, you will be designing and implementing algorithms to store and search graphs. World Airline (WA) flies to many destinations worldwide including: Moscow, Seoul, Tokyo, Hong Kong, and London. 
-	Complete detailed information regarding airline flight routes can be found from the link <a href="http://www.cse.unt.edu/~huangyan/3110/Assignments/Project/graphGenerator/flight.txt" target="_blank"><font color="#0099ff">flight.txt</font></a>. 
-	The flight.txt contains a “from  city” and its destination cities that WA flights to. Note that the flight.txt is 
-	a synthetically generated datasets by a graph data generator available from the link <a href="http://www.cse.unt.edu/~huangyan/3110/Assignments/Project/graphGenerator" target="_blank"><font color="#0099ff">graphGen</font></a>. You may want to download the graph generator and generate a few more graphs with different number of cities 
-	to test your algorithms.</font>
+	<font size="4"> In this project, you will be designing and implementing algorithms to store and search graphs. World Airline (WA) flies to many destinations worldwide including: Moscow, Seoul, Tokyo, Hong Kong, London, etc. Complete detailed information regarding airline flight routes can be found from the link <a href="./flight.txt" target="_blank"><font color="#0099ff">flight.txt</font></a>. 
+	The flight.txt contains a “from  city” and its destination cities that WA flights to (<b>Note 1:</b> you can ignore the distance because we only care about number of connections in this project. The distance means there is a path from cityA to cityB in that row. <b>Note 2:</b> This dataset in flight.txt is synthetically generated for course project, and is not necessarily real-world data).</font>
 	</p>
 
 
