--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -140,6 +140,9 @@ div img:hover{
 		
 		<ul>
 			<li>
+				<font size="4"> <b>10/27/2025:</b>  <a href=".\project.htm" target="_blank"><font color="#0099ff">Course project</font></a> is out, due at 11:50pm on 12/05/2022.</font>
+			</li>
+			<li>
 				<font size="4"> <b>10/06/2025:</b> Preview and quiz on Monday's class (10/13/2025).</font>
 			</li>
 			<li>
