--- a/teaching/25F-2110/project.htm
+++ b/teaching/25F-2110/project.htm
@@ -3,7 +3,7 @@
 <!-- saved from url=(0042)https://cse.buffalo.edu/~jmeng2/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script async="" src="./page_files/analytics.js.download"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-3974203-1', 'auto'); ga('send', 'pageview');</script>
     
-    <title>Data Structures and Algorithms</title>
+    <title>Foundations of Data Structures</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../../stylefiles/global.css">
     <link rel="stylesheet" type="text/css" href="../../stylefiles/navigation.css">
@@ -31,12 +31,12 @@ div img:hover{
 	
 	
 	
-    <font size="5"><center><b>CSCE 3110 - Data Structures and Algorithms</b></center></font>
+    <font size="5"><center><b>CSCE 2110 - Foundations of Data Structures</b></center></font>
 
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Fall 2022</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Fall 2025</b></font> &nbsp; &nbsp; 
 	<br>
 	<br>
 	<font size="4"> <b>Course Project: World Airline Route Search</b></font> &nbsp; &nbsp; 
@@ -53,7 +53,7 @@ div img:hover{
 		
 		<ul>
 			<li>
-				Due date: Dec. 9, 2022 (<font color="red">No late submissions are accepted!</font>) <br><br>
+				Due date: Dec. 5, 2025 (<font color="red">No late submissions are accepted!</font>) <br><br>
 			</li>
 			<li>
 				Full points: 100 (report: 40 points, code: 60 points)
