--- a/teaching/25F-2110/index.htm
+++ b/teaching/25F-2110/index.htm
@@ -353,7 +353,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  11/5 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				<b>Graph (I)</b> [<a href="slides\2110-topic 10-Graph I.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font> </font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -361,7 +361,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 13</b> <br> 11/10 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				TBD </font>
+				<b>Graph (II)</b> [<a href="slides\2110-topic 11-Graph II.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] </font> </font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
