--- a/index.html
+++ b/index.html
@@ -183,11 +183,12 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 		<a href="https://transportation.unt.edu/sites/default/files/unt_campus_parking.pdf" target="_blank"><font color="#2D61FF">UNT Map</font></a>   &nbsp; 
 		<a href="https://www.google.com/" target="_blank"><font color="#2D61FF">Google</font></a>     &nbsp; 
 		<a href="https://scholar.google.com/" target="_blank"><font color="#2D61FF">gScholar</font></a>   &nbsp; 
-		<a href="http://maps.google.com/" target="_blank"><font color="#2D61FF">gMap</font></a>   &nbsp; 
+		<!-- <a href="http://maps.google.com/" target="_blank"><font color="#2D61FF">gMap</font></a>   &nbsp;  -->
 		<a href="https://www.thecvf.com/" target="_blank"><font color="#2D61FF">CVF</font></a>   &nbsp; 
 		<a href="https://ieeexplore.ieee.org/Xplore/home.jsp" target="_blank"><font color="#2D61FF">IEEE</font></a> &nbsp; 
 		<a href="https://csrankings.org/#/index?all&us" target="_blank"><font color="#2D61FF">CSRankings</font></a> &nbsp; 
-		<a href="https://www.editorialmanager.com/pr/default.aspx?adobe_mc=MCMID%3D29504155241840331153107436488397987575%7CMCORGID%3D4D6368F454EC41940A4C98A6%2540AdobeOrg%7CTS%3D1740507429" target="_blank"><font color="#2D61FF">PR</font></a>
+		<a href="https://www.editorialmanager.com/pr/default.aspx?adobe_mc=MCMID%3D29504155241840331153107436488397987575%7CMCORGID%3D4D6368F454EC41940A4C98A6%2540AdobeOrg%7CTS%3D1740507429" target="_blank"><font color="#2D61FF">PR</font></a> &nbsp; 
+		<a href="https://www.editorialmanager.com/imavis/Default.aspx" target="_blank"><font color="#2D61FF">IVC</font></a>
 	
 	<HR>
 	
