--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <div class="photo_intro">
         <img src="./personal/hfan-2022.jpeg" alt="Heng Fan" class="photo" height="130">
         <div class="intro">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font>Heng Fan</font></span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 100%">Assistant Professor</font>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 150%">Assistant Professor</font>
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://computerscience.engineering.unt.edu/"><font color="2D61FF">Department of Computer Science and Engineering</font></a>, <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>
-			<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://datascience.unt.edu/index.html"><font color="2D61FF">Department of Data Science (Affiliated Faculty)</font></a>, <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>
+			<!-- <br>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://datascience.unt.edu/index.html"><font color="2D61FF">Department of Data Science (Affiliated Faculty)</font></a>, <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a> -->
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office: Room F284, UNT Discovery Park, 3940 N Elm St, Denton, TX 76207
             <br>
@@ -55,12 +55,12 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR>
 	
-    <font size="4" color="black"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#2D61FF">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>, and also an affiliated faculty in the <a href="https://datascience.unt.edu/index.html"><font color="2D61FF">Department of Data Science</font></a>. He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://haibinling.github.io/" target="https://haibinling.github.io/"><font><font color="#2D61FF">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision with a particular interest in various video analysis tasks using vision and language, robotics with a focus on robot vision perception, and medical image analysis. He serves or has served as an Associate Editor for <i>Pattern Recognition</i> (PR) and as Area Chairs for ICCV, NeurIPS, BMVC, WACV, and ICME. 
+    <!-- <font size="4" color="black"><b>Short Bio</b></font> -->
     
+		<font> <b>Short Bio:</b> Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#2D61FF">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>. He received his B.S. in Computer Science and Technology from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://haibinling.github.io/" target="https://haibinling.github.io/"><font><font color="#2D61FF">Prof. Haibin Ling</font></font></a>) in Computer Science from Stony Brook University in 2021, respectively. His research interests include computer vision with a particular interest in various video analysis tasks using vision and language, robotics with a focus on robot vision perception, and medical image analysis. He serves or has served as an Associate Editor for <i>Pattern Recognition</i> (PR) and as an Area Chair for various conferences including ICCV, NeurIPS, BMVC, WACV, and ICME. 
+
 	<HR>
-	
-	
+
 	<font size="3" color="black"><b>To prospective students:</b></font> I am looking for <i><b>self-motivated</b></i> <b>PhD</b>/<b>master</b>/<b>undergraduate</b>/<b>TAMS</b> students and <b>(remote) research interns</b> to work on interesting problems in computer and robotic vision. If you are interested, please read <a href="./prospective-students.html" target="_blank"><font color="#2D61FF">HERE</font></a>.
 	
 	<!-- <font size="3" color="black"><b>To prospective students:</b></font>: <font size="3"> I am looking for <b><i>self-motivated</i> PhD students</b> to work on interesting problems in computer and robotic vision, with a focus on <i>general video analysis</i>. Solid background in mathematics and programming is required. If you're interested, please send your CV, transcript(s), and test scores to my e-mail (heng.fan@unt.edu). Publication in related fields is a plus.<br>
@@ -80,8 +80,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR>
 
-	<font size="4" color="black"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
-    <ul style="margin-top:5px;">
+	<font size="4" color="black"><b>News</b>&nbsp;<img src="./personal/news.gif" border="0"></font>
+    <ul style="margin-top:0px;">
 		<li><font style="font-weight:bold; line-height: 120%">2025-10:</font> A paper on planar tracking is accepted to Computer Vision and Image Understanding (CVIU).</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-10:</font> Recognized as the <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/8" target="_blank"><font><font color="#2D61FF">World's Top 2% Scientists</font></font></a> by Standford University/Elsevier.
 		<li><font style="font-weight:bold; line-height: 120%">2025-09:</font> Three papers (pdf/code, pdf/code, pdf/code) are accepted to <a href="https://neurips.cc/" target="_blank"><font><font color="#2D61FF">NeurIPS 2025</font></font></a>.</li>
