--- a/service.html
+++ b/service.html
@@ -36,6 +36,13 @@
 				<br>
 			</p>
 		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Associate Editor, Image and Vision Computing (<font style="font-weight:bold">IVC</font>), 2025-now
+				<br>
+			</p>
+		</li>
 		
 		
     </ul>
@@ -77,7 +84,7 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Area Chair, IEEE International Conference on Multimedia & Expo (<font style="font-weight:bold">ICME</font>), 2025
+				Area Chair, IEEE International Conference on Multimedia & Expo (<font style="font-weight:bold">ICME</font>), 2025, 2026
 				<br>
 			</p>
 		</li>
