--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- <a class="navi" href="./student.html">Student Supervision</a> -->
 </div>
 
-<div class="navi_bar"></div>
+<div class="navi_bar"></div>  <!-- UNT Vision and AI Lab (VAIL) -->
 
 <div class="central_body">
 
