--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,22 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
+				<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">PlanarTrack: A High-quality and Challenging Benchmark for Large-scale Planar Object Tracking</font>
+						<br>
+						<font color="#000000">Y. Jiao, X. Liu, X. Liu, X. Yuan, H. Fan, and L. Zhang&dagger;</font>
+						<br>
+						<font>Computer Vision and Image Understanding (<b>CVIU</b>), 306: 130848, 2025.</font>
+						<br>
+						paper  &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
 				<td><img src="./publication/LMEEC.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
